--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-03-30  David Turner  <david@freetype.org>
+
+	* src/ftdiff.c: change interface keys to allow you to change
+	settings for a single column only. Press F1 for details
+
 2007-03-28  Werner Lemberg  <wl@gnu.org>
 
 	* src/ftdiff.c: Remove many compiler warnings.
