--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-04-09  Werner Lemberg  <wl@gnu.org>
+
+	* src/ftdiff.c (process_event): Handle `?' key.
+
 2007-04-04  Werner Lemberg  <wl@gnu.org>
 
 
