--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-05-09  Ryan Hill  <dirtyepic@gentoo.org>
+
+	* Makefile: Fix rules for fttimer which doesn't use graphical
+	output.
+
 2007-04-09  Werner Lemberg  <wl@gnu.org>
 
 
