--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2007-06-09  Werner Lemberg  <wl@gnu.org>
+
+	* src/ftgrid.c (Process_Event): Assign usual actions to keys F7-F12.
+	(event_help): Updated.
+	(main): Don't expect a Unicode encoded font -- we are only working
+	with glyph indices currently.
+
 2007-06-01  Werner Lemberg  <wl@gnu.org>
 
 	* src/ftcommon.c (FTDemo_Index_To_Bitmap): Initialize `*x_advance'.
