--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2008-06-10  Werner Lemberg  <wl@gnu.org>
+
+
+	* Version 2.3.6 released.
+	=========================
+
+
+	Tag sources with `VER-2-3-6'.
+
+	* README: Updated.
+
 2008-05-18  Wermer Lemberg  <wl@gnu.org>
 
 	* src/ftdiff.c (render_mode_names): Use better strings.
