--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2009-07-30  Boris Letocha  <b.letocha@gmc.net>
+
+	[graph] Fix rendering on Windows.
+
+	* graph/win32/grwin32.c (gr_win32_surface_refresh_rectangle):
+	Handle `gr_pixel_mode_gray' correctly.
+
 2009-06-17  Werner Lemberg  <wl@gnu.org>
 
 	Reduce number of automatically compiled programs.
