--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+2009-10-06  Werner Lemberg  <wl@gnu.org>
+
+	* Version 2.3.10 released.
+	==========================
+
+
+	Tag sources with `VER-2-3-10'.
+
+	* README: Updated.
+
+	* Makefile (major, minor, patch): Fix regexp to allow more
+	than a single digit.
+	(dist): We now use git.
+
 2009-07-30  Boris Letocha  <b.letocha@gmc.net>
 
 	[graph] Fix rendering on Windows.
