--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2010-07-12  Werner Lemberg  <wl@gnu.org>
+
+	* Version 2.4.0 released.
+	==========================
+
+
+	Tag sources with `VER-2-4-0'.
+
+	* README: Updated.
+
 2010-06-28  Werner Lemberg  <wl@gnu.org>
 
 	ftbench: Fix suboptions of `-b'.
