--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2010-07-19  Werner Lemberg  <wl@gnu.org>
+
+	* Version 2.4.1 released.
+	==========================
+
+
+	Tag sources with `VER-2-4-1'.
+
+	* README: Updated.
+
 2010-07-17  Werner Lemberg  <wl@gnu.org>
 
 	ftmulti: Fix possible buffer overflow.
