--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2011-04-20  Werner Lemberg  <wl@gnu.org>
+
+	[ftgrid]: Prevent incorrect output of `1', `2', and `3' keys.
+
+	* src/ftgrid.c (Process_Event) <'1', '2', '3'>: Ensure that hinting
+	is active, otherwise old table data could be emitted.
+
 2011-04-19  Werner Lemberg  <wl@gnu.org>
 
 	* Makefile (FT_INCLUDES): Simplify.
