--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2011-07-29  Werner Lemberg  <wl@gnu.org>
+
+	* Version 2.4.6 released.
+	=========================
+
+
+	Tag sources with `VER-2-4-6'.
+
+	* README: Updated.
+
 2011-06-24  Werner Lemberg  <wl@gnu.org>
 
 	* Version 2.4.5 released.
