--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2011-10-18  Werner Lemberg  <wl@gnu.org>
+
+	* Version 2.4.7 released.
+	=========================
+
+
+	Tag sources with `VER-2-4-7'.
+
+	* README: Updated.
+
 2011-08-14  Werner Lemberg  <wl@gnu.org>
 
 	Improve usage messages.
